<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/stat_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stat_btn1"
            android:textStyle="bold"
            android:clickable="true"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/stat_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stat_btn2"
            android:textStyle="bold"
            android:clickable="true"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/stat_maxscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stat_btn3"
            android:textStyle="bold"
            android:clickable="true"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/stat_displaymode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="All"
            android:textStyle="bold"
            android:clickable="true"
            />

    </LinearLayout>

    <ListView android:id="@+id/statistic_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@color/divider"
        android:dividerHeight="2dp"/>

</LinearLayout>